...
            "state" : "translated",
            "value" : "サブスクリプションを更新中..."
          }
        }
      }
    },
    "ui-feed-no-groups" : {

    },
    "ui-feed-no-photos" : {

    },
    "ui-screen-feed" : {

    },
    "ui-screen-settings" : {

    },
    "ui-screen-subscription" : {

    },
    "ui-settings-groups-section" : {

    },
    "ui-settings-profile-section" : {

    },
    "ui-settings-subscription-section" : {

    },
    "ui-subscription-free" : {

    },
    "ui-subscription-premium" : {

    },
    "upload.button" : {
...
